# ADLCV_ex1

./: .gitignore  README.md  caption_training_data.py  crawer.py  evaluate.py  evaluate_preview_clip.py  generate.py  metadata.json  metadata.jsonl  metadata_gemma3_dense.json  metadata_gemma3_dense.jsonl  metadata_mistral_large_dense.json  metadata_mistral_large_dense.jsonl  old_metadata.jsonl  old_prompt.json  old_prompt_dirty_realistic.json  old_prompt_dirty_realistic_short.json  prepare_data.py  prompts.json  prompts_minimal_mountain_road.json  pyproject.toml  run_experiments.sh  run_prior_rank_sweep.sh  run_prompt_weight_experiments.sh  run_train.sh  train_dreambooth_lora_sd3.py
class_data/: custom_rockfall_v1_generation_config.json
training_data/: metadata.jsonl  metadata_controllable.jsonl
